[tool.poetry]
name = "pyspark-factories"
version = "0.0.0"
description = "Create pyspark dataframes with randomly generated data from structschema"
authors = ["Daan Rademaker <d.v.rademaker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^3.2.1"
Faker = "^13.3.1"
dotmap = "^1.3.30"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^5.0.0"
coverage = "^6.5.0"
pytest = "^6.2.5"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 180
extend-exclude = ["deploy", ".venv"]