[tool.poetry]
name = "pyspark-factories"
version = "0.0.0"
description = "Create pyspark dataframes with randomly generated data from structschema"
authors = ["Daan Rademaker <d.v.rademaker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^3.2.1"
Faker = "^13.3.1"
dotmap = "^1.3.30"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^5.0.0"
coverage = "^6.5.0"
pytest = "^6.2.5"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.pytest.ini_options]
addopts = "--junitxml=junit/report.xml"
testpaths = ["tests"]

[tool.coverage.report]
omit = ["tests/*", ".venv/*"]
show_missing = true
precision = 2

[tool.coverage.run]
command_line = "-m pytest -v tests/"
omit = ["tests/*",".venv/*"]
source = ["."]

[tool.flake8]
max-line-length = 180
extend-exclude = ["deploy", ".venv"]
extend-ignore = "E203"

[tool.isort]
profile = "black"
line_length = 120
